Change cpp_plotter so that it can also generate an output list with interaction hits and identity of the interactions. Now the output is a list of 3 objects: The Plot of protein complexes detected, the name of the pair of significant coeluted proteins, and its Pearson correlation when that is higher than the filter!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(Calc_mean_matrix)
 export(combine_1_n_mapping)
 export(cpp_plotter)
+export(extract_mcp)
 export(fdr_mCP)
 export(mcp_list)
 export(split_mat)
