New integrated and documented mCP function to run all 3 functions in mCP

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,10 @@ export(combine_1_n_mapping)
 export(cpp_plotter)
 export(extract_mcp)
 export(fdr_mCP)
+export(mCP)
 export(mcp_list)
 export(split_mat)
 import(assertthat)
+import(corrr)
+import(gdata)
 import(gprofiler2)
