audate description and vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: mCP
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Hugo", "Amedei", , "Hugo.amedei@med.uni-goettingen.de", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
@@ -15,12 +15,12 @@ Suggests:
     rmarkdown
 VignetteBuilder: knitr
 Imports:
-    gdata,
+   gdata (>= 2.18.0),
     assertthat,
     corrr,
     gprofiler2,
     readr,
-    dplyr
+    dplyr(>= 1.0.0)
   
  
  
