--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(Calc_mean_matrix)
 export(combine_1_n_mapping)
 export(cpp_plotter)
+export(cpp_plt_sim)
 export(extract_mcp)
 export(fdr_mCP)
 export(mCP)
