--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: mCP
 Title: Targeted detection of protein complexes form Co-fractionation mass spectrometry experiments.
 Version: 0.0.0.9000
 Authors@R: 
-    person("Hugo", "Amedei", , "Hugo.amedei@med.uni-goettingen.de", role = c("aut", "cre"),
+    person("Hugo", "Amedei", , "hugoagno3@gmail.comed.uni-goettingen.de", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: The mCP package provides a set of functions for targeted protein complex detection in mass spectrometry-based proteomics co-fractionation experiments. It is designed to work with experimental data in the form of protein abundance matrices, and to compare the data to the CORUM database of known protein complexes to identify complexes that are present in the experimental data.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
