--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(cpp_plotter)
 export(cpp_plt_sim)
 export(extract_mcp)
 export(fdr_mCP)
+export(fdr_mCP_standard)
 export(mCP)
+export(mCP_dynamic)
 export(mcp_list)
 export(split_mat)
 import(assertthat)
