update name space

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(cpp_plt_sim)
 export(extract_mcp)
 export(fdr_mCP)
 export(fdr_mCP_connections)
+export(fdr_mCP_standard)
 export(fdr_mCP_standard_modified)
 export(mCP)
 export(mcp_list)
